--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
 name=AHT20
-version=1.0.3
+version=1.0.0
 author=SparkFun Electronics
-maintainer=SparkFun Electronics
-sentence=A library to drive ASAIT's new AHT20 temperature and humidity IC.
-paragraph=Use our solderless and easy-to-use Qwiic system to send I2C commands to the <a href="https://www.sparkfun.com/products/16618">SparkX Qwiic Humiditiy AHT20</a> to get current temperature and humidity readings.
+maintainer=dvarrel
+sentence=library to drive AHT20 temperature and humidity IC.
+paragraph=I2C sensor, simple library
 category=Sensors
 url=https://github.com/dvarrel/AHT20.git
 architectures=*
